# cortex

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRD-platform-atlas.md  README.md  kilo.json  pyproject.toml
.github/workflows/: extract-and-publish.yml
config/: repos-fixtures.yaml  repos-local.yaml  repos-real.yaml  repos.yaml
docs/: flow-integration.md  kilo-setup.md  vision.md
mcp_server/: __init__.py  __main__.py  server.py
mcp_server/tests/: test_mcp_tools.py
pipelines/: azure-pipelines.yml
plans/: comprehensive-improvement-plan.md  dto-class-resolution-fix-plan.md  dto-schema-extraction-plan.md  endpoint-params-extraction-plan.md  gcp-deployment-plan.md  performance-accuracy-improvement-plan.md  release-distribution-plan.md  search-endpoint-paths-plan.md
schemas/: manifest.schema.json  service.schema.json
scripts/: deploy.sh  upload-to-firestore.sh  upload_to_firestore.py
src/atlas/: __init__.py  aggregator.py  cli.py  schema.py  storage.py  validation.py
src/atlas/extractors/: __init__.py  android.py  backend_java.py  base.py  ios.py
src/cortex/: __init__.py  aggregator.py  cli.py  firestore_storage.py  graph_diff.py  repo_cloner.py  schema.py  storage.py  validation.py  webhook.py
src/cortex/extractors/: __init__.py  android.py  backend_go.py  backend_java.py  backend_python.py  backend_typescript.py  base.py  frontend_angular.py  ios.py  utils.py
tests/: conftest.py  test_aggregator.py  test_android_extractor.py  test_backend_go_extractor.py  test_backend_java_extractor.py  test_cli.py  test_context_extraction.py  test_extractors_registry.py  test_firestore_storage.py  test_frontend_angular_extractor.py  test_ios_extractor.py  test_ios_multitarget_extractor.py  test_repo_cloner.py  test_storage.py  test_validation.py
tests/fixtures/sample-android-repo/: service.yaml  settings.gradle.kts
tests/fixtures/sample-backend-go-repo/: Dockerfile  go.mod  go.sum  main.go
tests/fixtures/sample-backend-java-repo/: AGENTS.md  Dockerfile  (+1 more)
tests/fixtures/sample-backend-python-repo/: Dockerfile  pyproject.toml
tests/fixtures/sample-backend-python-repo/src/app/: main.py
tests/fixtures/sample-backend-python-repo/src/app/models/: order.py
tests/fixtures/sample-backend-python-repo/src/app/routers/: orders.py
tests/fixtures/sample-backend-python-repo/src/app/tasks/: process_order.py
(+68 files in other folders)
