[project]
name = "cortex"
version = "1.0.0"
description = "Platform Cortex: structured architectural metadata extraction, aggregation, and MCP serving"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "tomli>=2.0",
    "google-cloud-storage>=2.16",
    "google-cloud-firestore>=2.16",
    "mcp>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
ios = ["pbxproj>=4.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
cortex = "cortex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests", "mcp_server/tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["cortex"]
omit = ["src/cortex/cli.py"]  # CLI coverage requires integration tests

[tool.coverage.report]
fail_under = 75  # iOS pbxproj paths require optional dependency; target 80% with full deps
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
